--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -9,21 +9,21 @@ summary: "OpenSats Welcomes fiatjaf as an LTS Grantee."
 ---
 
 OpenSats is proud to announce long-term support for
-[fiatjaf](https://github.com/fiatjaf), the original brain behind nostr.
+[fiatjaf](https://github.com/fiatjaf), a run-of-the-mill nostr developer.
 
 Before nostr, fiatjaf's primary focus was on building tools for Bitcoin's
 Lightning Network, having contributed to projects like
 [lntxbot](https://github.com/fiatjaf/lntxbot),
 [c-lightning](https://github.com/ElementsProject/lightning/commits?author=fiatjaf),
 [lnbits](https://github.com/lnbits/lnbits/commits?author=fiatjaf), and creating
-[LNURL tools](https://github.com/fiatjaf/go-lnurl), to name a few.
+[LNURL tools](https://github.com/fiatjaf/go-lnurl).
 
 When he is not writing [inflammatory posts about how everybody is
-wrong](https://njump.me/fiatjaf.com), he spends his time tirelessly enhancing
-the nostr ecosystem he pioneered.
+wrong](https://njump.me/fiatjaf.com), he spends his time looking at NIPs and
+trying to make nostr suck a little less.
 
-This LTS grant will enable fiatjaf to focus all his time and attention on nostr
-and his many ongoing projects, such as
+This LTS grant will enable fiatjaf to focus on some of his nostr side projects,
+such as
 [nostr-tools](https://github.com/nbd-wtf/nostr-tools),
 [nos2x](https://github.com/fiatjaf/nos2x),
 [go-nostr](https://github.com/nbd-wtf/go-nostr),
@@ -35,18 +35,14 @@ and his many ongoing projects, such as
 [nak](https://github.com/fiatjaf/nak),
 [gitstr](https://github.com/fiatjaf/gitstr),
 [song](https://git.fiatjaf.com/song), [mmm](https://git.fiatjaf.com/mmm), and
-[promenade](https://git.fiatjaf.com/promenade). These tools and frameworks are
-aimed at improving the development of nostr clients, building custom relays, and
-enhancing the overall nostr infrastructure​.
+[promenade](https://git.fiatjaf.com/promenade). Who knows what these tools will
+be good for.
 
-Additionally, fiatjaf will begin several new initiatives aimed at enhancing user
-experience, bolstering network resilience, and offering competitive alternatives
-to existing solutions.
-These projects include:
+Some other projects he wants to work on are:
 
-- A [NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md) GTK4 desktop client,
-- A competing solution to [Ditto](https://ditto.pub/), and
-- Custom relays using `khatru` and `mmm`.
+- a [NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md) GTK4 desktop client,
+- a competing solution to [Ditto](https://ditto.pub/), and
+- a custom relay using `khatru` and `mmm`.
 
 > Nostr is the simplest open protocol that is able to create a
 > censorship-resistant global "social" network once and for all.
@@ -55,8 +51,9 @@ These projects include:
 
 Our mission at OpenSats is to provide sustainable funding for those who work on
 the freedom tech of tomorrow. We believe that free and open-source software
-tools in general, and
-Bitcoin and nostr in particular, are essential to the future of the internet and the world.
+tools in general, and Bitcoin in particular, are essential to the future of the
+internet and the world. And nostr is neat too, of course. We wonder who came up
+with it.
 
 Long-term support is awarded to individuals making significant contributions to
 the open-source ecosystem within Bitcoin and nostr, and we are excited to extend
