fiatjaf feedback again (drivechains)

--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -18,9 +18,9 @@ Lightning Network, having contributed to projects like
 [lnbits](https://github.com/lnbits/lnbits/commits?author=fiatjaf), and creating
 [LNURL tools](https://github.com/fiatjaf/go-lnurl).
 
-When he is not writing [inflammatory posts about how everybody is
-wrong](https://njump.me/fiatjaf.com), he spends his time looking at NIPs and
-trying to make nostr suck a little less.
+When he is not cheering for Drivechains or writing [inflammatory posts about how
+everybody is wrong](https://njump.me/fiatjaf.com), he spends his time looking at
+NIPs and trying to make nostr suck a little less.
 
 This LTS grant will enable fiatjaf to focus on some of his nostr side projects,
 such as
