--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -36,7 +36,7 @@ such as
 [gitstr](https://github.com/fiatjaf/gitstr),
 [song](https://git.fiatjaf.com/song), [mmm](https://git.fiatjaf.com/mmm), and
 [promenade](https://git.fiatjaf.com/promenade). Who knows what these tools will
-be good for.
+be good for. (We're not even sure he knows.)
 
 Some other projects he wants to work on are:
 
@@ -52,17 +52,17 @@ Some other projects he wants to work on are:
 Our mission at OpenSats is to provide sustainable funding for those who work on
 the freedom tech of tomorrow. We believe that free and open-source software
 tools in general, and Bitcoin in particular, are essential to the future of the
-internet and the world. And nostr is neat too, of course. We wonder who came up
-with it.
+internet and the world. (And nostr is neat too, of course. We wonder who came up
+with it.)
 
 Long-term support is awarded to individuals making significant contributions to
 the open-source ecosystem within Bitcoin and nostr, and we are excited to extend
-our support to such a remarkable and prolific developer.
+our support to a developer like fiatjaf.
 
 Our [LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers) is
 made possible by generous donors like you. To help us continue supporting
-important open-source contributors like fiatjaf, consider making a donation to
-[The Nostr Fund](/funds/nostr):
+important open-source contributors, consider making a donation to [The Nostr
+Fund](/funds/nostr):
 
 <center>
     <DonateToNostrFundButton/>
