Add (bigger) donate buttons to fund description pages (#295)

--- a/data/funds/ops.mdx
+++ b/data/funds/ops.mdx
@@ -26,6 +26,10 @@ our (very small) operational budget is 100% funded from generous donors like you
 who appreciate our hard work to support free and open source projects in the
 Bitcoin space.
 
-You can donate to our operational budget by clicking the "Donate" button on this
+You can donate to our operational budget by clicking the donate button on this
 page or head over to the [About Us](/about) page to learn more about the
 organization and our efforts.
+
+<center>
+    <DonateToOperationsButton/>
+</center>
