--- a/data/blog/kieran-receives-lts-grant.mdx
+++ b/data/blog/kieran-receives-lts-grant.mdx
@@ -7,3 +7,32 @@ authors: ['arvin', 'dergigi']
 images: ['TODO']
 summary: "OpenSats Welcomes Kieran as an LTS Grantee."
 ---
+
+OpenSats is excited to announce long-term support for another prolific nostr developer,
+[Kieran Harkin](https://github.com/v0l).
+
+Kieran is renowned for his work on [snort.social](https://snort.social/), a web-based nostr client, and [zap.stream](https://zap.stream/), a pioneering live stream and video platform built on nostr with the ability for audiences to directly "[zap](https://github.com/nostr-protocol/nips/blob/master/57.md)" bitcoin to live streamers; he is also the creator behind [void.cat](http://void.cat), a decentralized media hosting service.
+
+This LTS grant will help Kieran achieve several key enhancements for his existing projects, including:
+
+- Developing native iOS and Android apps for snort.social
+
+- Introducing SnortDeck, a TweetDeck-like UI for advanced user management
+
+- Expanding [zap.stream](https://zap.stream/) features, such as rankings and viewer/user stats
+
+- Improving backend infrastructure for better user experience (UX) and scalability
+
+> The primary goal with Snort and zap.stream is to make decentralized social media and streaming more accessible, ensuring censorship resistance with user control, while allowing content creators to monetize their work directly with their audience using Bitcoin
+>
+><cite>–Kieran</cite>
+
+Our mission at OpenSats is to provide sustainable funding for the builders and maintainers of critical FOSS infrastructure within the Bitcoin and nostr ecosystem.
+
+Our [LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers) is made possible by generous donors like you. To continue supporting important contributors like Kieran, consider making a donation to [The Nostr Fund](/funds/nostr).
+
+<center>
+    <DonateToNostrFundButton/>
+</center>
+
+If you're working on free and open-source nostr infrastructure and/or the protocol itself, don't hesitate to [apply for funding](/apply/).
