--- a/data/blog/kieran-receives-lts-grant.mdx
+++ b/data/blog/kieran-receives-lts-grant.mdx
@@ -4,7 +4,7 @@ date: '2024-08-01'
 tags: ['OpenSats', 'grants', 'nostr', 'LTS']
 draft: false
 authors: ['arvin', 'dergigi']
-images: ['TODO']
+images: ['/static/images/blog/43-kieran.jpg']
 summary: "OpenSats Welcomes Kieran as an LTS Grantee."
 ---
 
