--- a/data/blog/donation-commitment-from-build-asset-management.mdx
+++ b/data/blog/donation-commitment-from-build-asset-management.mdx
@@ -7,3 +7,57 @@ authors: ['arvin', 'dergigi']
 images: ['TODO']
 summary: "OpenSats receives a donation commitment from Build Asset Management for open-source Bitcoin development."
 ---
+
+OpenSats is thrilled to announce a commitment from Build Asset Management,
+donating 10% of the management fees from their Bitcoin-backed direct lending
+fund, [Build Secured Income Fund
+I](https://getbuilding.com/private-credit/build-secured-income-fund-i/), to
+support open-source Bitcoin development. This generous donation, provided with
+no strings attached and on a monthly basis, will support open-source Bitcoin
+development, with funds split equally between OpenSats and the [Human Rights
+Foundation's Bitcoin Development Fund](https://hrf.org/devfund). This initiative
+underscores efforts to promote financial freedom and economic empowerment
+through open-source technology.
+
+> Every profitable Bitcoin business should support the open-source contributors
+> that make this movement possible. We are incredibly grateful for Build Asset
+> Management's long-term commitment to the OpenSats General Fund. This support
+> will enable us to fund hundreds of open-source contributors globally every
+> month, with the goal of increasing freedom for billions worldwide while making
+> the Bitcoin and broader freedom tech ecosystem more secure and robust.
+>
+> <cite>–Matt Odell, co-founder, OpenSats</cite>
+
+> Bitcoin is advancing financial freedom and economic empowerment for
+> individuals from the bottom up, across the globe, on an open and level playing
+> field. We are committed to supporting its continued development for a brighter
+> future, and these two organizations exhibit remarkable leadership and track
+> records through their work in this area.
+>
+> <cite>–Matt Dines, CIO, Build Asset Management</cite>
+
+> As Bitcoin continues to gain traction and financial legitimacy in the US and
+> other developed nations, it is heartening to see businesses being incentivized
+> to support open-source development. Build Asset Management's commitment to
+> donating directly to the Human Rights Foundation and our Bitcoin Development
+> Fund will have a meaningful impact by advancing Bitcoin and financial
+> inclusion for individuals in less developed and authoritarian countries.
+>
+> <cite>–Christian Keroles, Director of Financial Freedom, Human Rights
+> Foundation</cite>
+
+At OpenSats, 100% of this donation will directly support open-source projects
+and contributors working on freedom tech. Our [operational budget](/funds/ops)
+is funded separately, ensuring that all donations to our [open-source
+funds](/funds/) go entirely to projects and developers.
+
+We extend our gratitude to Build Asset Management for their trust and
+generosity. This support is crucial as we continue to provide support to
+high-impact projects and infrastructure within the Bitcoin and the broader
+open-source ecosystem. As a 501(c)(3) public charity, we rely on the generosity
+of the public and organizations like Build Asset Management to sustain ourselves
+in pursuit of [our mission](/mission).
+
+If you are a business, [consider donating](/donate) to our cause. If you are an
+open-source contributor working on freedom tech that is aligned with our
+mission, don't hesitate to apply for a grant via [opensats.org/apply](/apply).
