--- a/data/blog/donation-commitment-from-build-asset-management.mdx
+++ b/data/blog/donation-commitment-from-build-asset-management.mdx
@@ -5,11 +5,11 @@ tags: ['OpenSats', 'funding', 'donations', 'bitcoin']
 draft: false
 authors: ['arvin', 'dergigi']
 images: ['TODO']
-summary: "OpenSats receives a donation commitment from Build Asset Management for open-source Bitcoin development."
+summary: "OpenSats receives recurring donation commitment from Build Asset Management for open-source Bitcoin development."
 ---
 
 OpenSats is thrilled to announce a commitment from Build Asset Management,
-donating 10% of the management fees from their Bitcoin-backed direct lending
+donating 10% of management fees from their Bitcoin-backed direct lending
 fund, [Build Secured Income Fund
 I](https://getbuilding.com/private-credit/build-secured-income-fund-i/), to
 support open-source Bitcoin development.
