"support support" - reword

--- a/data/blog/donation-commitment-from-build-asset-management.mdx
+++ b/data/blog/donation-commitment-from-build-asset-management.mdx
@@ -23,7 +23,7 @@ support open-source Bitcoin development.
 > <cite>–Matt Dines, CIO, Build Asset Management</cite>
 
 We extend our gratitude to Build Asset Management for their trust and
-generosity. This support is crucial as we continue to provide support to
+generosity. This support is crucial as we continue to give grants to
 high-impact projects and infrastructure within the Bitcoin and the broader
 open-source ecosystem. As a 501(c)(3) public charity, we rely on the generosity
 of the public and organizations like Build Asset Management to sustain ourselves
