Apply Kieran's change requests

--- a/data/blog/kieran-receives-lts-grant.mdx
+++ b/data/blog/kieran-receives-lts-grant.mdx
@@ -15,16 +15,14 @@ Kieran is renowned for his work on [snort.social](https://snort.social/), a
 web-based nostr client, and [zap.stream](https://zap.stream/), a pioneering live
 stream and video platform built on nostr with the ability for audiences to
 directly "[zap](https://github.com/nostr-protocol/nips/blob/master/57.md)"
-bitcoin to live streamers; he is also the creator behind
-[void.cat](http://void.cat), a decentralized media hosting service.
+bitcoin to live streamers.
 
 This LTS grant will help Kieran achieve several key enhancements for his
 existing projects, including:
 
-- Developing native iOS and Android apps for snort.social
-- Introducing SnortDeck, a TweetDeck-like UI for advanced user management
-- Expanding [zap.stream](https://zap.stream/) features, such as rankings and viewer/user stats
-- Improving backend infrastructure for better user experience (UX) and scalability
+- Performance improvements for snort.social and zap.stream
+- Developing native applications for zap.stream
+- New zap.stream backend to create a marketplace of streaming providers
 
 > The primary goal with Snort and zap.stream is to make decentralized social
 > media and streaming more accessible, ensuring censorship resistance with user
