Add Header Image

--- a/data/blog/donation-commitment-from-build-asset-management.mdx
+++ b/data/blog/donation-commitment-from-build-asset-management.mdx
@@ -4,7 +4,7 @@ date: '2024-08-05'
 tags: ['OpenSats', 'funding', 'donations', 'bitcoin']
 draft: false
 authors: ['arvin', 'dergigi']
-images: ['TODO']
+images: ['/static/images/blog/44-build-asset-management.jpg']
 summary: "OpenSats receives recurring donation commitment from Build Asset Management for open-source Bitcoin development."
 ---
 
