Correction Edit for Odell's Quote

--- a/data/blog/donation-commitment-from-build-asset-management.mdx
+++ b/data/blog/donation-commitment-from-build-asset-management.mdx
@@ -51,14 +51,15 @@ and contributors working on freedom tech. Our [operational budget](/funds/ops)
 is funded separately, ensuring that all donations to our [open-source
 funds](/funds/) go entirely to projects and developers.
 
-> Every profitable Bitcoin business should support the open-source contributors
+> Every profitable Bitcoin business should support the open source contributors
 > that make this movement possible. We are incredibly grateful for Build Asset
-> Management's long-term commitment to the OpenSats General Fund. This support
-> will enable us to fund hundreds of open-source contributors globally every
-> month, with the goal of increasing freedom for billions worldwide while making
-> the Bitcoin and broader freedom tech ecosystem more secure and robust.
+> Management choosing to lead by example with a long-term commitment to the
+> OpenSats General Fund. OpenSats is currently funding hundreds of open source
+> contributors globally every month with the goal to increase freedom for
+> billions worldwide while also making the Bitcoin and greater freedom tech
+> ecosystem more secure and robust. 
 >
-> <cite>–Matt Odell, co-founder, OpenSats</cite>
+> <cite>—Matt Odell, co-founder, OpenSats</cite>
 >
 
 If you are a business, [consider donating](/donate) to our cause. If you are an
