--- a/data/blog/donation-commitment-from-build-asset-management.mdx
+++ b/data/blog/donation-commitment-from-build-asset-management.mdx
@@ -53,10 +53,10 @@ funds](/funds/) go entirely to projects and developers.
 
 > Every profitable Bitcoin business should support the open source contributors
 > that make this movement possible. We are incredibly grateful for Build Asset
-> Management choosing to lead by example with a long-term commitment to the
+> Management choosing to lead by example with a long term commitment to the
 > OpenSats General Fund. OpenSats is currently funding hundreds of open source
 > contributors globally every month with the goal to increase freedom for
-> billions worldwide while also making the Bitcoin and greater freedom tech
+> billions worldwide while also making the bitcoin and greater freedom tech
 > ecosystem more secure and robust. 
 >
 > <cite>—Matt Odell, co-founder, OpenSats</cite>
