--- a/data/blog/kieran-receives-lts-grant.mdx
+++ b/data/blog/kieran-receives-lts-grant.mdx
@@ -15,7 +15,8 @@ Kieran is renowned for his work on [snort.social](https://snort.social/), a
 web-based nostr client, and [zap.stream](https://zap.stream/), a pioneering live
 stream and video platform built on nostr with the ability for audiences to
 directly "[zap](https://github.com/nostr-protocol/nips/blob/master/57.md)"
-bitcoin to live streamers.
+bitcoin to live streamers; he is also the creator behind
+[void.cat](https://void.cat/), a media hosting service.
 
 This LTS grant will help Kieran achieve several key enhancements for his
 existing projects, including:
