--- a/data/blog/donation-commitment-from-build-asset-management.mdx
+++ b/data/blog/donation-commitment-from-build-asset-management.mdx
@@ -3,7 +3,7 @@ title: "OpenSats Receives Donation Commitment from Build Asset Management"
 date: '2024-08-06'
 tags: ['OpenSats', 'funding', 'donations', 'bitcoin']
 draft: false
-authors: ['arvin', 'dergigi']
+authors: ['odell', 'arvin', 'dergigi']
 images: ['/static/images/blog/44-build-asset-management.jpg']
 summary: "OpenSats receives recurring donation commitment from Build Asset Management for open-source Bitcoin development."
 ---
