--- a/data/blog/donation-commitment-from-build-asset-management.mdx
+++ b/data/blog/donation-commitment-from-build-asset-management.mdx
@@ -9,10 +9,10 @@ summary: "OpenSats receives recurring donation commitment from Build Asset Manag
 ---
 
 OpenSats is thrilled to announce a commitment from Build Asset Management,
-donating 10% of management fees from their Bitcoin-backed direct lending
+donating 10% of management fees from their bitcoin-backed direct lending
 fund, [Build Secured Income Fund
 I](https://getbuilding.com/private-credit/build-secured-income-fund-i/), to
-support open-source Bitcoin development.
+support open-source bitcoin development.
 
 > Bitcoin is advancing financial freedom and economic empowerment for
 > individuals from the bottom up, across the globe, on an open and level playing
@@ -23,11 +23,11 @@ support open-source Bitcoin development.
 > <cite>–Matt Dines, CIO, Build Asset Management</cite>
 
 We extend our gratitude to Build Asset Management for their trust and
-generosity. This support is crucial as we continue to give grants to
-high-impact projects and infrastructure within the Bitcoin and the broader
-open-source ecosystem. As a 501(c)(3) public charity, we rely on the generosity
-of the public and organizations like Build Asset Management to sustain ourselves
-in pursuit of [our mission](/mission).
+generosity. Their support is crucial as we continue to give grants to high-impact
+projects within the bitcoin and broader open-source ecosystem. As a 501(c)(3)
+public charity, we rely on the generosity of the public and organizations like
+Build Asset Management to sustain ourselves in pursuit of [our
+mission](/mission).
 
 This generous donation, provided with
 no strings attached and on a monthly basis, will support open-source Bitcoin
