--- a/data/blog/donation-commitment-from-build-asset-management.mdx
+++ b/data/blog/donation-commitment-from-build-asset-management.mdx
@@ -51,7 +51,7 @@ and contributors working on freedom tech. Our [operational budget](/funds/ops)
 is funded separately, ensuring that all donations to our [open-source
 funds](/funds/) go entirely to projects and developers.
 
-> Every profitable Bitcoin business should support the open source contributors
+> Every profitable bitcoin business should support the open source contributors
 > that make this movement possible. We are incredibly grateful for Build Asset
 > Management choosing to lead by example with a long term commitment to the
 > OpenSats General Fund. OpenSats is currently funding hundreds of open source
