Add proper /canary page

--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -52,7 +52,7 @@ as in the internal and external processes of our organization.
 
 [coi]: /docs/conflict.pdf
 [tax]: /docs/tax.pdf
-[owc]: /docs/canary.txt
+[owc]: /canary
 [rrp]: /docs/rrp.pdf
 [eeo]: /docs/eeo.pdf
 [wpp]: /docs/whistle.pdf
