Hard-wrap lines

--- a/data/pages/canary.mdx
+++ b/data/pages/canary.mdx
@@ -21,7 +21,8 @@ This canary is linked at [0] and will be re-signed on the following dates:
 * August 1
 * November 1
 
-We will include a link to a recent news article [1] in each update to establish that the signature was not pre-generated.
+We will include a link to a recent news article [1] in each update to establish
+that the signature was not pre-generated.
 
 [0] https://opensats.org/transparency
 [1] https://www.nobsbitcoin.com/mutiny-wallet-to-shut-down-at-the-end-of-the-year/
