--- a/data/blog/kieran-receives-lts-grant.mdx
+++ b/data/blog/kieran-receives-lts-grant.mdx
@@ -18,7 +18,7 @@ directly "[zap](https://github.com/nostr-protocol/nips/blob/master/57.md)"
 bitcoin to live streamers. He is also the creator of the
 [void.cat](https://void.cat/) media hosting service.
 
-This LTS grant will help Kieran achieve several key enhancements for his
+Long-term support will help Kieran to focus on several key enhancements for his
 existing projects, including:
 
 - Performance improvements for snort.social and zap.stream
