--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -37,6 +37,7 @@ as in the internal and external processes of our organization.
 
 - [Conflict of Interest][coi]
 - [Tax Policy][tax]
+- [Canary][owc]
 - [Record Retention Policy][rrp]
 - [EEO & Non-Discrimination Policy][eeo]
 - [Whistleblower Protection Policy][wpp]
@@ -51,6 +52,7 @@ as in the internal and external processes of our organization.
 
 [coi]: /docs/conflict.pdf
 [tax]: /docs/tax.pdf
+[owc]: /canary
 [rrp]: /docs/rrp.pdf
 [eeo]: /docs/eeo.pdf
 [wpp]: /docs/whistle.pdf
