Bullet point edits

--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -26,14 +26,14 @@ open-source development and are paving the way for a decentralized future. We
 are proud to support their work and look forward to the groundbreaking
 advancements that they will bring to the nostr ecosystem. These projects are:
 
-- [Osty](#Osty)
-- [Seer](#Seer)
-- [Alphaama](#Alphaama)
-- [Corny Chat](#Corny-Chat)
-- [Nostroots](#Nostroots)
-- [Dart NDK and Yana](#Dart-NDK-and-Yana)
+- [Osty](#osty)
+- [Seer](#seer)
+- [Alphaama](#alphaama)
+- [Corny Chat](#corny-chat)
+- [Nostroots](#nostroots)
+- [Dart NDK and Yana](#dart-ndk-and-yana)
 - [Jester UI and Nostr Spring Boot
-  Starter](#Jester-UI-and-Nostr-Spring-Boot-Starter)
+  Starter](#jester-ui-and-nostr-spring-boot-starter)
 
 Our support for nostr is made possible by generous donors like you. If you would
 like to help us continue supporting the nostr ecosystem, consider making a
