--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -15,7 +15,7 @@ projects, developers are leveraging nostr's unique architecture to create
 diverse solutions that emphasize user control, privacy, and open collaboration.
 
 Nostr has evolved beyond its initial perception as a 'Twitter clone.' It is now
-a foundational platform for self-sovereign identity, decentralized social
+a foundational protocol for self-sovereign identity, decentralized social
 graphs, web-of-trust systems, and secure communication frameworks. The potential
 applications of nostr are vast and continually expanding, reflecting its role as
 a cornerstone of permissionless social media and interaction.
