--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -8,60 +8,34 @@ images: ['/static/images/blog/TODO']
 summary: "OpenSats is funding seven more open-source projects in the nostr ecosystem."
 ---
 
-Unlocking a new era of decentralized innovation, the nostr protocol continues to
-flourish as a transformative, censorship-resistant alternative for building
-resilient social media and applications. With a growing ecosystem of innovative
-projects, developers are leveraging nostr's unique architecture to create
-diverse solutions that emphasize user control, privacy, and open collaboration.
+Nostr continues to flourish as a transformative, censorship-resistant alternative for building natively social services and applications. With a growing ecosystem of projects, users, and infrastructure, it’s becoming easier and easier to leverage nostr's architecture, social graph, and web-of-trust to create solutions that put the user in control.
 
-Nostr has evolved beyond its initial perception as a 'Twitter clone.' It is now
-a foundational protocol for self-sovereign identity, decentralized social
-graphs, web-of-trust systems, and secure communication frameworks. The potential
-applications of nostr are vast and continually expanding, reflecting its role as
-a cornerstone of permissionless social media and interaction.
+While it might not be immediately obvious at first glance, nostr has already evolved beyond its initial perception as a 'Twitter clone'. As a foundational protocol for self-sovereign identity and trust-minimized web infrastructure, a multitude of applications are being built on top of it. The potential use-cases of nostr are vast and continually expanding, and we can’t wait to see what will be built in the months and years to come as the world is shifting more and more towards a nostr-based web.
 
-In this sixth wave of grants, we are excited to highlight seven projects that
-are at the forefront of this innovation. These projects embody the spirit of
-open-source development and are paving the way for a decentralized future. We
-are proud to support their work and look forward to the groundbreaking
-advancements that they will bring to the nostr ecosystem. These projects are:
+In this sixth wave of nostr grants, we are excited to highlight eight projects that are at the forefront of this shift. These projects are:
 
 - [Osty](#osty)
 - [Seer](#seer)
 - [Alphaama](#alphaama)
 - [Corny Chat](#corny-chat)
 - [Nostroots](#nostroots)
-- [Dart NDK and Yana](#dart-ndk-and-yana)
-- [Jester UI and Nostr Spring Boot
-  Starter](#jester-ui-and-nostr-spring-boot-starter)
+- [Yana](#yana)
+- [Jester](#jester)
+- [Nostr Spring Boot Starter](#nostr-spring-boot-starter)
 
-Our support for nostr is made possible by generous donors like you. If you would
-like to help us continue supporting the nostr ecosystem, consider making a
-donation to [The Nostr Fund](/funds/nostr):
+Our support for nostr is made possible by generous donors like you. If you would like to help us continue supporting the nostr ecosystem, consider making a donation to [The Nostr Fund](https://opensats.org/funds/nostr):
 
 <center>
     <DonateToNostrFundButton/>
 </center>
 
-Let's take a closer look at these innovative projects that are pushing the
-boundaries of what's possible within the nostr ecosystem.
+Let's take a closer look at these projects and how they align with our mission.
 
----
+—
 
 ### Osty
 
-[Osty](https://osty.dev/), led by [Sepehr](https://github.com/sepehr-safari), is
-a free and open-source framework designed to streamline the development of web
-applications on the nostr protocol. It offers a comprehensive toolkit akin to
-[Next.js](https://nextjs.org/) but tailored for nostr, including UI components,
-widgets, NDK, and essential features like caching, routing, and state
-management. Osty aims to enhance both the development and team collaboration
-experience, providing templates for popular frameworks such as React, Vue, and
-Svelte. The project focuses on facilitating rapid app development from concept
-to production, with an emphasis on scalability, design patterns, safety, and
-performance. Future plans include evolving Osty into a no-code platform,
-enabling users with no coding skills to create customized nostr apps easily,
-potentially incorporating AI for app creation based on prompts.
+[Osty](https://osty.dev/) is a free and open-source framework designed to streamline the development of web applications on the nostr protocol. It offers a comprehensive toolkit akin to [Next.js](https://nextjs.org/) but tailored for nostr, including UI components, widgets, NDK, and essential features like caching, routing, and state management. Osty aims to enhance both the development and team collaboration experience, providing templates for popular frameworks such as React, Vue, and Svelte. The project focuses on facilitating rapid app development from concept to production, with an emphasis on scalability, design patterns, safety, and performance. Future plans include evolving Osty into a no-code platform, enabling users with no coding skills to create customized nostr apps easily, potentially incorporating AI for app creation based on prompts.
 
 Repository: [ostyjs/create-osty](https://github.com/ostyjs/create-osty/)
 
@@ -69,17 +43,7 @@ License: MIT
 
 ### Seer
 
-[Seer](https://github.com/Galaxoid-Labs/Seer#), by [Galaxoid
-Labs](https://github.com/Galaxoid-Labs), is an open-source application designed
-for group communication and management within nostr's protocol using
-[NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md). Built with
-Swift, Seer is optimized for macOS, iOS, iPadOS, and potentially visionOS,
-providing a native user experience similar to Apple Mail. The project aims to
-fill the gap in robust, platform-native nostr applications, offering seamless
-group communication and easy-to-deploy relay scripts for NIP-29 based groups.
-The project's goals include completing the macOS version, developing iOS and
-iPadOS versions, and creating one-click deploy scripts for relays. Future plans
-involve expanding to other platforms like Windows, Linux, and Android.
+[Seer](https://github.com/Galaxoid-Labs/Seer#) is an open-source application designed for group communication and management within nostr’s protocol using [NIP-29](https://github.com/nostr-protocol/nips/blob/master/29.md). Built with Swift, Seer is optimized for macOS, iOS, iPadOS, and potentially visionOS, providing a native user experience similar to Apple Mail. The project aims to fill the gap in robust, platform-native nostr applications, offering seamless group communication and easy-to-deploy relay scripts for NIP-29 based groups. The project's goals include completing the macOS version, developing iOS and iPadOS versions, and creating one-click deploy scripts for relays. Future plans involve expanding to other platforms like Windows, Linux, and Android.
 
 Repository: [Galaxoid-Labs/Seer](https://github.com/Galaxoid-Labs/Seer)
 
@@ -87,17 +51,7 @@ License: MIT
 
 ### Alphaama
 
-[Alphaama](https://alphaama.com/), led by [eskema](https://tiago.balas.pt/), is
-an open-source nostr client that combines a command-line interface with a
-graphical user interface, offering a highly customizable and flexible platform.
-Designed as a research project into UI/UX possibilities, alphaama encourages
-users to explore and modify its codebase, promoting privacy and user empowerment
-by giving full control over how users interact with nostr. The project aims to
-expose the inner workings of the protocol, providing an educational tool for
-newcomers and a creative playground for developers. Ongoing development includes
-new features and enhancements, with a focus on challenging conventional software
-design paradigms and inspiring unique approaches to decentralized network
-applications.
+[Alphaama](https://alphaama.com/) is an open-source nostr client that combines a command-line interface with a graphical user interface, offering a highly customizable and flexible platform. Designed as a research project into UI/UX possibilities, alphaama encourages users to explore and modify its codebase, promoting privacy and user empowerment by giving full control over how users interact with nostr. The project aims to expose the inner workings of the protocol, providing an educational tool for newcomers and a creative playground for developers. Ongoing development includes new features and enhancements, with a focus on challenging conventional software design paradigms and inspiring unique approaches to decentralized network applications.
 
 Repository: [eskema/alphaama](https://github.com/eskema/alphaama)
 
@@ -105,108 +59,51 @@ License: AGPL-3.0
 
 ### Corny Chat
 
-[Corny Chat](https://cornychat.com/), led by [Vicarious
-Drama](https://github.com/vicariousdrama), is an open-source audio spaces
-platform akin to Twitter Spaces or Clubhouse, forked from [Jam
-Systems](https://github.com/jam-systems/jam) with enhanced nostr integrations.
-The project aims to provide a decentralized, privacy-respecting alternative for
-audio discussions, supporting features like
-[NIP-07](https://github.com/nostr-protocol/nips/blob/master/07.md) logins,
-lightning payments, and customizable user profiles. Future enhancements include
-live chat, event scheduling, and room management features, making Corny Chat a
-vital tool for fostering community engagement and anonymous participation within
-the nostr ecosystem. The project is part of a broader effort to integrate FOSS
-applications with nostr, promoting greater adoption and flexibility. Key
-milestones include adding support for live activities and audio streams, as well
-as expanding functionality with custom emojis and room management tools.
+[Corny Chat](https://cornychat.com/) is an open-source audio spaces platform akin to Twitter Spaces or Clubhouse, forked from [Jam Systems](https://github.com/jam-systems/jam) with enhanced nostr integrations. The project aims to provide a decentralized, privacy-respecting alternative for audio discussions, supporting features like [NIP-07](https://github.com/nostr-protocol/nips/blob/master/07.md) logins, lightning payments, and customizable user profiles. Future enhancements include live chat, event scheduling, and room management features, making Corny Chat a vital tool for fostering community engagement and anonymous participation within the nostr ecosystem. The project is part of a broader effort to integrate FOSS applications with nostr, promoting greater adoption and flexibility. Key milestones include adding support for live activities and audio streams, as well as expanding functionality with custom emojis and room management tools.
 
-Repository:
-[vicariousdrama/cornychat](https://github.com/vicariousdrama/cornychat)
+Repository: [vicariousdrama/cornychat](https://github.com/vicariousdrama/cornychat)
 
 License: AGPL-3.0
 
 ### Nostroots
 
-[Nostroots](https://trustroots.github.io/nostroots/), led by [Callum
-Macdonald](https://github.com/chmac) and [guaka](https://github.com/guaka), is
-an initiative to migrate [Trustroots.org](http://trustroots.org)---a social
-network with over 100,000 members---onto the nostr protocol. Trustroots offers a
-platform similar to
-[Couchsurfing](https://about.couchsurfing.com/about/how-it-works/) with an
-alternative and more decentralized approach. The project aims to introduce its
-users to public/private key technology and expand its use cases beyond
-hospitality, including potential projects like a nostr based ride sharing app.
-The transition to nostr seeks to ensure the platform's independence from
-centralized servers by 2027, fostering privacy, freedom of movement, and
-communication. The team's goal is to complete this migration to becoming
-open-source without disrupting the user experience, ultimately making their
-ongoing involvement unnecessary.
+[Nostroots](https://trustroots.github.io/nostroots/) is an initiative to migrate [Trustroots.org](http://trustroots.org)—a social network with over 100,000 members—onto the nostr protocol. Trustroots offers a platform similar to [Couchsurfing](https://about.couchsurfing.com/about/how-it-works/) with an alternative and more decentralized approach. The project aims to introduce its users to public/private key technology and expand its use cases beyond hospitality, including potential projects like a nostr based ride sharing app. The transition to nostr seeks to ensure the platform's independence from centralized servers by 2027, fostering privacy, freedom of movement, and communication. The team's goal is to complete this migration to becoming open-source without disrupting the user experience, ultimately making their ongoing involvement unnecessary.
 
 Repository: [Trustroots/nostroots](https://github.com/Trustroots/nostroots)
 
 License: AGPL-3.0
 
-### Dart NDK and Yana
+### Yana
 
-[Dart NDK](https://pub.dev/packages/dart_ndk) and [Yana](https://yana.do/), led
-by [Frnandu](https://github.com/frnandu/), are two key projects in the nostr
-ecosystem.
+[Yana](https://yana.do/) is a nostr client built on top of Dart NDK. It offers a fast, multi-platform experience, particularly optimized for older devices. It includes integrations with external apps for secure event signing, ensuring users retain control over their private keys.
 
-Dart NDK (Nostr Development Kit) is a development kit written in Dart, designed
-to enhance the decentralization of nostr by providing components for relay
-connectivity, caching, and maximum performance through native code in C or Rust.
-It supports the [gossip/outbox
-model](https://github.com/frnandu/yana/blob/master/GOSSIP.md) for improved data
-discovery without reliance on central coordination.
+The author of Yana is also developing and maintaining [Dart NDK](https://github.com/relaystr/dart_ndk), a nostr development kit written in Dart which is designed to enhance the decentralization of nostr by providing components for relay connectivity, caching, and high performance through native implementations of performance-critical components in C and Rust. It supports the [outbox model](https://github.com/frnandu/yana/blob/master/GOSSIP.md) for improved data discovery without reliance on central coordination.
 
-Yana (Yet Another Nostr Application), a nostr client built with Flutter,
-leverages Dart NDK to offer a fast, multi-platform experience, particularly
-optimized for older devices. It includes integrations with external apps for
-secure event signing, ensuring users retain control over their private keys.
-
-Both projects aim to provide flexible, customizable solutions for various user
-profiles while maintaining a strong focus on privacy and user freedom. Upcoming
-milestones include achieving preferred status among nostr libraries for Dart
-NDK, and extensive feature implementations for Yana.
-
-Repositories: [relaystr/dart_ndk](https://github.com/relaystr/dart_ndk) and
-[frnandu/yana](https://github.com/frnandu/yana)
+Repositories: [frnandu/yana](https://github.com/frnandu/yana) & [relaystr/dart_ndk](https://github.com/relaystr/dart_ndk)
 
 Licenses: MIT
 
-### Jester UI and Nostr Spring Boot Starter
+### Jester
 
-[Jester UI](https://jesterui.github.io/) and [Nostr Spring Boot
-Starter](https://github.com/theborakompanioni/nostr-spring-boot-starter#), led
-by [Thebora Kompanioni](https://github.com/theborakompanioni), are two distinct
-projects aimed at expanding the nostr ecosystem.
+[Jester](https://jesterui.github.io/) is a chess implementation that uses nostr to communicate the player's moves. It is similar to [Lichess](https://lichess.org/), but integrates bitcoin microtransactions and thus allows players to earn sats and zap others during chess games. This project aspires to engage the growing chess community, with plans for hosting tournaments and potentially attracting broader audiences to nostr and Bitcoin.
 
-Jester UI is a chess platform over nostr, akin to
-[Lichess](https://lichess.org/), but integrates Bitcoin microtransactions,
-allowing players to earn and "zap" sats during chess games. This project aspires
-to engage the growing chess community, with plans for hosting tournaments and
-potentially attracting broader audiences to nostr and Bitcoin.
+Repository: [jesterui/jesterui](https://github.com/jesterui/jesterui)
 
-Nostr Spring Boot Starter provides core modules for developing extensible relay
-and client software tailored for businesses, focusing on Java and JVM-based
-languages. It aims to serve as a foundational infrastructure similar to
-[nginx](https://nginx.org/en/) for the web, but specifically for nostr, catering
-to businesses and developers who may not have the resources to build such
-infrastructure from the ground up.
+License: MIT
 
-Repository: [jesterui/jesteru](https://github.com/jesterui/jesterui) and
-[nostr-spring-boot-starter](https://github.com/theborakompanioni/nostr-spring-boot-starter)
+### Nostr Spring Boot Starter
 
-License: MIT, Apache-2.0
+The [Nostr Spring Boot Starter](https://github.com/theborakompanioni/nostr-spring-boot-starter) project provides core modules for developing extensible relay and client software tailored for businesses, focusing on Java and JVM-based languages. It aims to serve as a foundational infrastructure similar to `nginx` for the web, but specifically for nostr, catering to businesses and developers who may not have the resources to build such infrastructure from the ground up.
 
----
+Repository: [theborakompanioni/nostr-spring-boot-starter](https://github.com/theborakompanioni/nostr-spring-boot-starter)
 
-We are proud to support these projects and look forward to their continuous
-contributions to the nostr ecosystem. If you're working on a nostr project that
-is free and open-source, don't hesitate to [apply](/apply). Our support for
-nostr projects and contributors is made possible through the generosity of our
-donors. Help us empower developers working towards creating a decentralized
-future by making a donation to [The Nostr Fund](/funds/nostr).
+License: Apache-2.0
+
+—
+
+We are proud to support these projects and look forward to their continuous contributions to the nostr ecosystem. If you're working on a nostr project that is free and open-source, don't hesitate to [apply for funding](https://opensats.org/apply).
+
+Our support for these projects is made possible through the generosity of our donors. You can help us empower those who are building towards a decentralized future by making a donation to [The Nostr Fund](https://opensats.org/funds/nostr).
 
 <center>
     <DonateToNostrFundButton/>
