--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -17,7 +17,7 @@ create solutions that put the user in control.
 While it might not be immediately obvious at first glance, nostr has already
 evolved beyond its initial perception as a 'Twitter clone'. As a foundational
 protocol for self-sovereign identity and trust-minimized web infrastructure, a
-multitude of applications are being built on top of it. The potential use-cases
+multitude of applications are being built on top of it. The potential use cases
 of nostr are vast and continually expanding, and we can’t wait to see what will
 be built in the months and years to come as the world is shifting more and more
 towards a nostr-based web.
@@ -58,7 +58,7 @@ frameworks such as React, Vue, and Svelte. The project focuses on facilitating
 rapid app development from concept to production, with an emphasis on
 scalability, design patterns, safety, and performance. Future plans include
 evolving Osty into a no-code platform, enabling users with no coding skills to
-create customized nostr apps easily, potentially incorporating AI for app
+create customized nostr apps easily, and potentially incorporating AI for app
 creation based on prompts.
 
 Repository: [ostyjs/create-osty](https://github.com/ostyjs/create-osty/)  
@@ -72,7 +72,7 @@ designed for group communication and management within nostr’s protocol using
 Swift, Seer is optimized for macOS, iOS, iPadOS, and potentially visionOS,
 providing a native user experience similar to Apple Mail. The project aims to
 fill the gap in robust, platform-native nostr applications, offering seamless
-group communication and easy-to-deploy relay scripts for NIP-29 based groups.
+group communication and easy-to-deploy relay scripts for NIP-29-based groups.
 The project's goals include completing the macOS version, developing iOS and
 iPadOS versions, and creating one-click deploy scripts for relays. Future plans
 involve expanding to other platforms like Windows, Linux, and Android.
@@ -99,10 +99,10 @@ License: AGPL-3.0
 ### Corny Chat
 
 [Corny Chat](https://cornychat.com/) is an open-source audio spaces platform
-akin to Twitter Spaces or Clubhouse, forked from [Jam
-Systems](https://github.com/jam-systems/jam) with enhanced nostr integrations.
-The project aims to provide a decentralized, privacy-respecting alternative for
-audio discussions, supporting features like
+akin to Twitter Spaces or Clubhouse. It was forked from [Jam
+Systems](https://github.com/jam-systems/jam) and extended to directly integrate
+with nostr. The project aims to provide a decentralized, privacy-respecting
+alternative for audio discussions, supporting features like
 [NIP-07](https://github.com/nostr-protocol/nips/blob/master/07.md) logins,
 lightning payments, and customizable user profiles. Future enhancements include
 live chat, event scheduling, and room management features, making Corny Chat a
@@ -123,10 +123,10 @@ members—onto the nostr protocol. Trustroots offers a platform similar to
 [Couchsurfing](https://about.couchsurfing.com/about/how-it-works/) with an
 alternative and more decentralized approach. The project aims to introduce its
 users to public/private key technology and expand its use cases beyond
-hospitality, including potential projects like a nostr based ride sharing app.
+hospitality, including potential projects like a nostr-based ride-sharing app.
 The transition to nostr seeks to ensure the platform's independence from
 centralized servers by 2027, fostering privacy, freedom of movement, and
-communication. The team's goal is to complete this migration to becoming
+communication. The team's goal is to complete this migration to become
 open-source without disrupting the user experience, ultimately making their
 ongoing involvement unnecessary.
 
