--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -14,13 +14,13 @@ growing ecosystem of projects, users, and infrastructure, it’s becoming easier
 and easier to leverage nostr's architecture, social graph, and web-of-trust to
 create solutions that put the user in control.
 
-While it might not be immediately obvious at first glance, nostr has already
-evolved beyond its initial perception as a 'Twitter clone'. As a foundational
-protocol for self-sovereign identity and trust-minimized web infrastructure, a
-multitude of applications are being built on top of it. The potential use cases
-of nostr are vast and continually expanding, and we can’t wait to see what will
-be built in the months and years to come as the world is shifting more and more
-towards a nostr-based web.
+While it might not be obvious to outsiders, nostr has already evolved beyond its
+initial perception as a clone of existing social media platforms. Being a
+foundational protocol for self-sovereign identity and trust-minimized web
+infrastructure, a multitude of applications are being built on top of it. The
+potential use cases of nostr are vast and continually expanding, and we can’t
+wait to see what will be built in the months and years to come as the world is
+shifting more and more towards a nostr-based web.
 
 In this sixth wave of nostr grants, we are excited to highlight eight projects
 that are at the forefront of this shift. These projects are:
