--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'nostr', 'wave']
 draft: false
 authors: ['arvin', 'dergigi']
 images: ['/static/images/blog/TODO']
-summary: "OpenSats is funding seven more open-source projects in the nostr ecosystem."
+summary: "OpenSats is funding nine more open-source projects in the nostr ecosystem."
 ---
 
 Nostr continues to flourish as a transformative, censorship-resistant
@@ -22,7 +22,7 @@ potential use cases of nostr are vast and continually expanding, and we can’t
 wait to see what will be built in the months and years to come as the world is
 shifting more and more towards a nostr-based web.
 
-In this sixth wave of nostr grants, we are excited to highlight eight projects
+In this sixth wave of nostr grants, we are excited to highlight nine projects
 that are at the forefront of this shift. These projects are:
 
 - [Osty](#osty)
@@ -30,7 +30,7 @@ that are at the forefront of this shift. These projects are:
 - [Alphaama](#alphaama)
 - [Corny Chat](#corny-chat)
 - [Nostroots](#nostroots)
-- [Yana](#yana)
+- [Yana \& Dart NDK](#yana--dart-ndk)
 - [Jester](#jester)
 - [Nostr Spring Boot Starter](#nostr-spring-boot-starter)
 
@@ -133,7 +133,7 @@ ongoing involvement unnecessary.
 Repository: [Trustroots/nostroots](https://github.com/Trustroots/nostroots)  
 License: AGPL-3.0
 
-### Yana
+### Yana & Dart NDK
 
 [Yana](https://yana.do/) is a nostr client built on top of Dart NDK. It offers a
 fast, multi-platform experience, particularly optimized for older devices. It
