Split up Yana & Dart NDK

--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -30,7 +30,8 @@ that are at the forefront of this shift. These projects are:
 - [Alphaama](#alphaama)
 - [Corny Chat](#corny-chat)
 - [Nostroots](#nostroots)
-- [Yana \& Dart NDK](#yana--dart-ndk)
+- [Yana](#yana)
+- [Dart NDK](#dart-ndk)
 - [Jester](#jester)
 - [Nostr Spring Boot Starter](#nostr-spring-boot-starter)
 
@@ -133,12 +134,17 @@ ongoing involvement unnecessary.
 Repository: [Trustroots/nostroots](https://github.com/Trustroots/nostroots)  
 License: AGPL-3.0
 
-### Yana & Dart NDK
+### Yana
 
 [Yana](https://yana.do/) is a nostr client built on top of Dart NDK. It offers a
 fast, multi-platform experience, particularly optimized for older devices. It
 includes integrations with external apps for secure event signing, ensuring
 users retain control over their private keys.
+
+Repositories: [frnandu/yana](https://github.com/frnandu/yana)  
+Licenses: MIT
+
+### Dart NDK
 
 The author of Yana is also developing and maintaining [Dart
 NDK](https://github.com/relaystr/dart_ndk), a nostr development kit written in
@@ -148,7 +154,7 @@ implementations of performance-critical components in C and Rust. It supports
 the [outbox model](https://github.com/frnandu/yana/blob/master/GOSSIP.md) for
 improved data discovery without reliance on central coordination.
 
-Repositories: [frnandu/yana](https://github.com/frnandu/yana) & [relaystr/dart_ndk](https://github.com/relaystr/dart_ndk)  
+Repositories: [relaystr/dart_ndk](https://github.com/relaystr/dart_ndk)  
 Licenses: MIT
 
 ### Jester
