--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -141,8 +141,8 @@ fast, multi-platform experience, particularly optimized for older devices. It
 includes integrations with external apps for secure event signing, ensuring
 users retain control over their private keys.
 
-Repositories: [frnandu/yana](https://github.com/frnandu/yana)  
-Licenses: MIT
+Repository: [frnandu/yana](https://github.com/frnandu/yana)  
+License: MIT
 
 ### Dart NDK
 
@@ -154,8 +154,8 @@ implementations of performance-critical components in C and Rust. It supports
 the [outbox model](https://github.com/frnandu/yana/blob/master/GOSSIP.md) for
 improved data discovery without reliance on central coordination.
 
-Repositories: [relaystr/dart_ndk](https://github.com/relaystr/dart_ndk)  
-Licenses: MIT
+Repository: [relaystr/dart_ndk](https://github.com/relaystr/dart_ndk)  
+License: MIT
 
 ### Jester
 
