Attach social image file
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -4,7 +4,7 @@ date: '2024-08-08'
 tags: ['OpenSats', 'grants', 'nostr', 'wave']
 draft: false
 authors: ['arvin', 'dergigi']
-images: ['/static/images/blog/TODO']
+images: ['/static/images/blog/45-nostr-grants-august-2024.jpg']
 summary: "OpenSats is funding nine more open-source projects in the nostr ecosystem."
 ---
 
