--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -37,7 +37,7 @@ that are at the forefront of this shift. These projects are:
 
 Our support for nostr is made possible by generous donors like you. If you would
 like to help us continue supporting the nostr ecosystem, consider making a
-donation to [The Nostr Fund](https://opensats.org/funds/nostr):
+donation to [The Nostr Fund](/funds/nostr):
 
 <center>
     <DonateToNostrFundButton/>
@@ -187,12 +187,12 @@ License: Apache-2.0
 We are proud to support these projects and look forward to their continuous
 contributions to the nostr ecosystem. If you're working on a nostr project that
 is free and open-source, don't hesitate to [apply for
-funding](https://opensats.org/apply).
+funding](/apply).
 
 Our support for these projects is made possible through the generosity of our
 donors. You can help us empower those who are building towards a decentralized
 future by making a donation to [The Nostr
-Fund](https://opensats.org/funds/nostr).
+Fund](/funds/nostr).
 
 <center>
     <DonateToNostrFundButton/>
