Fix alphaama's license

--- a/data/blog/nostr-grants-august-2024.mdx
+++ b/data/blog/nostr-grants-august-2024.mdx
@@ -95,7 +95,7 @@ a focus on challenging conventional software design paradigms and inspiring
 unique approaches to decentralized network applications.
 
 Repository: [eskema/alphaama](https://github.com/eskema/alphaama)  
-License: AGPL-3.0
+License: WTFPL
 
 ### Corny Chat
 
