Add `curl | gpg --import` step

--- a/data/pages/canary.mdx
+++ b/data/pages/canary.mdx
@@ -49,10 +49,16 @@ cxTuIaBrGxbWfLgNEIgjkT3IMWqe2ZKRhcbNblyOj7fJQ3qswDc=
 
 # Don't trust, verify
 
-1. Import the [PGP key](/about/dergigi) of our executive director
+1. Import Gigi's [PGP key](/about/dergigi#pgp-key):
+
+```
+curl https://opensats.org/docs/dergigi.pub.asc | gpg --import
+```
+
 2. Download the [signed canary statement][scs]
 3. Run `gpg --auto-key-retrieve --verify canary.txt.asc`
 4. You should get an output that is similar to the following (note the date that the canary was signed):
+
 ```
 gpg: Signature made Tue  6 Aug 13:02:37 2024 WEST
 gpg:                using RSA key 8198A18530A522A09561243989C4A25E69A5DE7F
